--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <section class="videoSect">
-      <video id="vidBrunno" src="/assets/brunninho_da_Guitarra.mp4"></video>
+      <video id="vidBrunno" controls  muted src="/assets/brunninho_da_Guitarra.mp4"></video>
     </section>
 </body>
 </html>
