--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
     <section class="videoSect">
       <video id="vidBrunno" controls  muted src="/assets/brunninho_da_Guitarra.mp4"></video>
+
+      <div class="controle">
+
+
+      </div>
     </section>
 </body>
 </html>
