--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet">
+  <script src="script.js" defer></script>
 
-    <title>Video Player - Estudo Front-end</title>
+  <title>Video Player - Estudo Front-end</title>
 </head>
+
 <body>
-    <section class="videoSect">
-      <video id="vidBrunno" controls  muted src="/assets/brunninho_da_Guitarra.mp4"></video>
+  <section class="videoSect">
+    <video id="vidBrunno" src="/assets/brunninho_da_Guitarra.mp4"></video>
 
-      <div class="controle">
+    <div class="controle">
+      <img class="btn" onclick="recarregar()" src="/assets/button/refresh-cw.svg">
+      <img class="btn" onclick="retroceder()" src="/assets/button/rewind.svg">
+      <img class="btn" onclick="play()" src="/assets/button/play.svg">
+      <img class="btn" onclick="pause()" src="/assets/button/pause.svg">
+      <img class="btn" onclick="avancar()" src="/assets/button/fast-forward.svg">
+      <img class="btn" onclick="mutar()" src="/assets/button/volume-x.svg">
+      <img class="btn" onclick="aumentarTela()" src="/assets/button/maximize.svg">
 
-
-      </div>
-    </section>
+    </div>
+  </section>
 </body>
+
 </html>
