--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="controle">
       <img class="btn" onclick="recarregar()" src="/assets/button/refresh-cw.svg">
       <img class="btn" onclick="retroceder()" src="/assets/button/rewind.svg">
-      <img class="btn" onclick="play()" src="/assets/button/play.svg">
+      <img class="btn" id="playPause" onclick="play()" src="/assets/button/play.svg" >
       <img class="btn" onclick="pause()" src="/assets/button/pause.svg">
       <img class="btn" onclick="avancar()" src="/assets/button/fast-forward.svg">
       <img class="btn" onclick="mutar()" src="/assets/button/volume-x.svg">
