--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel="stylesheet">
-  <script src="script.js" defer></script>
+  <link href="./stylesheet/style.css" rel="stylesheet">
+  <script src="./Scripts/script.js" defer></script>
 
   <title>Video Player - Estudo Front-end</title>
 </head>
@@ -16,10 +16,16 @@
     <video id="vidBrunno" src="/assets/brunninho_da_Guitarra.mp4"></video>
 
     <div class="controle">
+      
+      <div class="playPause-btn">
+        <img  class="btn" onclick="play()" src="/assets/button/play.svg">
+        <img  class="btn" onclick="pause()" src="/assets/button/pause.svg">
+      </div>
+
       <img class="btn" onclick="recarregar()" src="/assets/button/refresh-cw.svg">
       <img class="btn" onclick="retroceder()" src="/assets/button/rewind.svg">
-      <img class="btn" id="playPause" onclick="play()" src="/assets/button/play.svg" >
-      <img class="btn" onclick="pause()" src="/assets/button/pause.svg">
+
+
       <img class="btn" onclick="avancar()" src="/assets/button/fast-forward.svg">
       <img class="btn" onclick="mutar()" src="/assets/button/volume-x.svg">
       <img class="btn" onclick="aumentarTela()" src="/assets/button/maximize.svg">
