--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="controle">
       
       <div class="playPause-btn">
-        <img  class="btn" onclick="play()" src="/assets/button/play.svg">
-        <img  class="btn" onclick="pause()" src="/assets/button/pause.svg">
+        <img id="playPause" class="btn" onclick="play()" src="/assets/button/play.svg">
+        <!-- <img  class="btn" onclick="pause()" src="/assets/button/pause.svg"> -->
       </div>
 
       <img class="btn" onclick="recarregar()" src="/assets/button/refresh-cw.svg">
