--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="controle">
       
       <div class="playPause-btn">
-        <img id="playPause" class="btn" onclick="play()" src="/assets/button/play.svg">
+        <img id="playPause" src="/assets/button/play.svg">
+        <!-- estava na imagem a cima class="btn" onclick="play()" -->
         <!-- <img  class="btn" onclick="pause()" src="/assets/button/pause.svg"> -->
       </div>
 
